feat: add fuel-ui

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,9 @@
   {{/unless}}
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="vendor/fuel-ui/bundles/fuel-ui.min.css" />
 </head>
 <body>
   <fuel-ui-cli-quickstart-app>Loading...</fuel-ui-cli-quickstart-app>
@@ -17,6 +20,7 @@
   
 
     {{#each scripts.polyfills}}<script src="{{.}}"></script>{{/each}}
+    <script src="vendor/fuel-ui/bundles/fuel-ui.min.js"></script>
     <script>
       System.import('system-config.js').then(function () {
         System.import('main');
